# ai-job-hunter

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/ai/: .env.example  README.md  pyproject.toml
apps/ai/app/: chunking.py  config.py  embedder.py  extraction.py  main.py  models.py  scoring.py  vector_store.py
apps/ai/app/routers/: embed.py  extract.py  health.py  score.py
apps/ai/tests/: conftest.py  test_chunking.py  test_health.py
apps/api/: .env.example  .eslintrc.cjs  README.md  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/ai/: ai-client.service.ts  ai.constants.ts  ai.controller.ts  ai.module.ts  ai.service.ts  embed-cv.processor.ts  embed-job.processor.ts  extract-job.processor.ts  score-cv.processor.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  current-user.decorator.ts  google-auth.guard.ts  types.ts
apps/api/src/cvs/: cvs.controller.ts  cvs.module.ts  cvs.service.ts
apps/api/src/health/: health.controller.ts
apps/api/src/ingestion/: ingestion.constants.ts  ingestion.module.ts  ingestion.processor.ts  ingestion.service.ts
apps/api/src/jobs/: jobs.controller.ts  jobs.module.ts  jobs.repository.ts  jobs.service.ts
apps/web/: .env.example  .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.ts  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
infra/: docker-compose.yml
infra/localstack-init/: 01-create-bucket.sh
(+30 files in other folders)
