[project]
name = "ai-job-hunter-ai"
version = "0.1.0"
description = "Python AI service for AI Career Copilot — embeddings, RAG, structured extraction (Phase 2)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "fastapi>=0.115.4",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "structlog>=24.4.0",
  "httpx>=0.27.2",
  "openai>=1.54.3",
  "qdrant-client>=1.12.1",
  "tiktoken>=0.8.0",
  "langchain>=0.3.7",
  "langchain-openai>=0.2.5",
  "langchain-text-splitters>=0.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.2",
  "black>=24.10.0",
  "mypy>=1.13.0",
  "httpx>=0.27.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]  # let black handle line length

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
